Git Hub address

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,6 @@
 
 </div>
 
-    <div class="footer"><a href="https://github.com/cate13/Creative3">GitHub Link</a></div>
+    <div class="footer"><a href="https://github.com/cate13/CreativeProject4">GitHub Link</a></div>
   </body>
 </html>
